removing some bugs found by findbugs